Fix alignment issue of the footer ads

--- a/css/main.css
+++ b/css/main.css
@@ -2143,6 +2143,7 @@ body.indexVisible > div#index button#indexbutton {
 	margin: 0 5px;
 	display: inline-block;
 	float: none;
+	vertical-align: middle;
 }
 
 @media (max-width: 680px) {
